Fix horizontal scroll bars

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -815,13 +815,13 @@ pre code {
     }
 }
 
-@media (min-width: 450px) {
+@media (min-width: 480px) {
     .container {
         width: 450px;
     }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 630px) {
     .container {
 	width: 600px;
     }
